--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,6 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-video {
-  height: 450px;
   overflow: hidden;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
@@ -281,7 +280,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background-repeat: no-repeat;
   position: relative;
   width: 100%;
-  background-position: c;
+  background-position: center;
 }
 .fh5co-cover .overlay {
   z-index: 0;
