--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,25 @@ body {
   background: #fff;
 }
 
+#pause{
+  display: none;
+}
+
+#confirmar{
+  margin-bottom: 100px;
+}
+
+.div-icon{
+  cursor: pointer;
+  border-radius: 50px;
+  text-align: center;
+  max-width: 60px;
+  margin: 0 auto;
+  background-color: #fff;
+  color: #000;
+  font-size: 20px;
+}
+
 #page {
   position: relative;
   overflow-x: hidden;
