--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ body {
   margin-bottom: 100px;
 }
 
+.qr-container {
+  margin-top: 20px;
+  text-align: center;
+}
+
 .div-icon{
   cursor: pointer;
   border-radius: 50px;
